# sonilo-mcp

./: .gitignore  LICENSE  README.md  SECURITY.md  glama.json  pyproject.toml  server.json  setup.py  smithery.yaml
.github/workflows/: publish-mcp.yml  release.yml
docs/: PUBLISHING.md
docs/superpowers/plans/: 2026-07-12-sfx-tools.md
docs/superpowers/specs/: 2026-07-12-sfx-tools-design.md
src/sonilo_mcp/: __init__.py  __main__.py  api.py
tests/: conftest.py  test_api.py
