[project]
name = "sonilo-mcp"
version = "0.1.0"
description = "MCP server for Sonilo AI music generation API"
authors = [{ name = "Sonilo", email = "support@sonilo.com" }]
readme = "README.md"
license = { text = "MIT" }
keywords = ["sonilo", "mcp", "music", "ai", "audio", "video-to-music"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
    "httpx>=0.27",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "build>=1.2",
]

[project.scripts]
sonilo-mcp = "sonilo_mcp.api:main"

[project.urls]
Homepage = "https://platform.sonilo.com"
Repository = "https://github.com/sonilo-ai/sonilo-mcp"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
